--- a/CourseProject/CourseProject/Tables.xaml
+++ b/CourseProject/CourseProject/Tables.xaml
@@ -7,14 +7,14 @@
         mc:Ignorable="d"
         Title="Tables" Height="350" Width="600"
         WindowStartupLocation="CenterScreen"
-        Loaded="Window_Loaded"
         >
     <Grid>
         <Label x:Name="labelTableName" Content="Текущая: " HorizontalAlignment="Left" Margin="150,30,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
-        <DataGrid x:Name="dataGridMain" Margin="150,55,30,30" VerticalAlignment="Stretch" AutoGenerateColumns="True"/>
+        <DataGrid x:Name="dataGridMain" Margin="150,55,30,70" VerticalAlignment="Stretch" AutoGenerateColumns="True"/>
         
         <Label Content="Таблицы:" HorizontalAlignment="Left" Margin="30,30,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
         <ComboBox x:Name="comboBoxMain" Margin="30, 55, 0, 0" HorizontalAlignment="Left" VerticalAlignment="Top" MinWidth="90" SelectionChanged="comboBoxMain_SelectionChanged">
         </ComboBox>
+        <Button x:Name="buttonUpdateDB" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="150, 260, 30, 30" Content="Обновить" FontSize="14" Click="buttonUpdateDB_Click"/> 
     </Grid>
 </Window>
