--- a/CourseProject/Inserts/InsertDetail.xaml
+++ b/CourseProject/Inserts/InsertDetail.xaml
@@ -5,27 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CourseProject"
         mc:Ignorable="d"
-        Title="InsertDetail" Height="380" Width="300"
+        Title="InsertDetail" Height="480" Width="300"
         WindowStartupLocation="CenterScreen"
         >
     <Grid>
         <Label Content="Склад: "  HorizontalAlignment="Left" Margin="30,30,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
         <ComboBox x:Name="comboBoxStorage" Margin="30,50,30,0" VerticalAlignment="Top" FontSize="14" IsReadOnly="True"/>
+        
+        <Label Content="Авто: "  HorizontalAlignment="Left" Margin="30,80,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
+        <ComboBox x:Name="comboBoxAuto" Margin="30,100,30,0" VerticalAlignment="Top" FontSize="14" IsReadOnly="True"/>
 
-        <Label Content="Название: "  HorizontalAlignment="Left" Margin="30,80,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
-        <TextBox x:Name="textBoxName" Margin="30,100,30,0" VerticalAlignment="Top" FontSize="14" MaxLength="100"/>
+        <Label Content="Название: "  HorizontalAlignment="Left" Margin="30,130,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
+        <TextBox x:Name="textBoxName" Margin="30,150,30,0" VerticalAlignment="Top" FontSize="14" MaxLength="100"/>
+        
+        <Label Content="Артикул: "  HorizontalAlignment="Left" Margin="30,180,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
+        <TextBox x:Name="textBoxArticul" Margin="30,200,30,0" VerticalAlignment="Top" FontSize="14" MaxLength="100"/>
 
-        <Label Content="Производитель: "  HorizontalAlignment="Left" Margin="30,130,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
-        <TextBox x:Name="textBoxProd" Margin="30,150,30,0" VerticalAlignment="Top" FontSize="14" MaxLength="50"/>
+        <Label Content="Производитель: "  HorizontalAlignment="Left" Margin="30,230,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
+        <TextBox x:Name="textBoxProd" Margin="30,250,30,0" VerticalAlignment="Top" FontSize="14" MaxLength="50"/>
 
-        <Label Content="Категория: "  HorizontalAlignment="Left" Margin="30,180,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
-        <TextBox x:Name="textBoxCategory" Margin="30,200,30,0" VerticalAlignment="Top" FontSize="14" MaxLength="30"/>
+        <Label Content="Категория: "  HorizontalAlignment="Left" Margin="30,280,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
+        <TextBox x:Name="textBoxCategory" Margin="30,300,30,0" VerticalAlignment="Top" FontSize="14" MaxLength="30"/>
 
-        <Label Content="Цена: "  HorizontalAlignment="Left" Margin="30,230,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
-        <TextBox x:Name="textBoxPriceR" Margin="30,250,200,0" VerticalAlignment="Top" FontSize="14" MaxLength="10" PreviewTextInput="NumberValidationTextBox"/>
-        <Label Content="р. "  HorizontalAlignment="Left" Margin="100,250,80,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
-        <TextBox x:Name="textBoxPriceK" Margin="150,250,80,0" VerticalAlignment="Top" FontSize="14" MaxLength="10" PreviewTextInput="NumberValidationTextBox"/>
-        <Label Content="к. "  HorizontalAlignment="Left" Margin="220,250,30,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
+        <Label Content="Цена: "  HorizontalAlignment="Left" Margin="30,330,0,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
+        <TextBox x:Name="textBoxPriceR" Margin="30,350,200,0" VerticalAlignment="Top" FontSize="14" MaxLength="10" PreviewTextInput="NumberValidationTextBox"/>
+        <Label Content="р. "  HorizontalAlignment="Left" Margin="100,350,80,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
+        <TextBox x:Name="textBoxPriceK" Margin="150,350,80,0" VerticalAlignment="Top" FontSize="14" MaxLength="10" PreviewTextInput="NumberValidationTextBox"/>
+        <Label Content="к. "  HorizontalAlignment="Left" Margin="220,350,30,0" VerticalAlignment="Top" FontSize="16" Padding="0"/>
         
         <Button x:Name="buttonInsert" Content="Добавить" VerticalAlignment="Bottom" Margin="30, 0, 30, 30" FontSize="18" Click="buttonInsert_Click"/>
 
